# ai-news-aggregator

./: .gitignore  Dockerfile  pyproject.toml  render.yaml
.github/workflows/: daily-digest.yml  discover-channels.yml
app/: config.py  daily_runner.py  runner.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/database/: connection.py  repository.py
app/scrapers/: openai.py
app/scripts/: discover_channels.py
app/services/: process_email.py
app/utils/: retry.py
data/: channels.json
