[project]
name = "ai-news-aggregator-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docling>=2.110.0",
    "feedparser>=6.0.12",
    "google-genai>=2.10.0",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "youtube-transcript-api>=1.2.4",
]
